--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "howler": "^2.0.15",
     "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
+    "tone": "^0.12.80",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
