--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.0.3",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.0.3",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "howler": "^2.0.15",
     "jquery": "^3.3.1",
+    "ng-sidebar": "^8.0.0",
     "rxjs": "~6.2.0",
     "tone": "^0.12.80",
     "zone.js": "~0.8.26"
