--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@types/angular-material": "^1.1.60",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "howler": "^2.0.15",
