--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
