--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@material/layout-grid": "^0.41.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/angular-material": "^1.1.60",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "howler": "^2.0.15",
+    "install": "^0.12.2",
     "jquery": "^3.3.1",
     "ng-sidebar": "^8.0.0",
+    "npm": "^6.4.1",
     "rxjs": "~6.2.0",
     "tone": "^0.12.80",
     "zone.js": "~0.8.26"
