--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/animate.css/animate.css",
               "src/styles.css",
               "node_modules/@material/layout-grid/dist/mdc.layout-grid.min.css"
             ],
