--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^7.0.3",
@@ -25,7 +26,9 @@
     "@material/layout-grid": "^0.41.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/angular-material": "^1.1.60",
+    "animate.css": "^3.7.0",
     "core-js": "^2.5.4",
+    "flexlayout": "^1.0.6",
     "hammerjs": "^2.0.8",
     "howler": "^2.0.15",
     "install": "^0.12.2",
