--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css",
               "node_modules/@material/layout-grid/dist/mdc.layout-grid.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/tone/build/Tone.min.js"
+            ]
           },
           "configurations": {
             "production": {
