--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material/layout-grid": "^0.41.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/angular-material": "^1.1.60",
+    "angular-selector": "^1.6.1",
     "animate.css": "^3.7.0",
     "core-js": "^2.5.4",
     "flexlayout": "^1.0.6",
