Configure project to use sass

--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,10 @@
       }
     }
   },
-  "defaultProject": "music"
+  "defaultProject": "music",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
