--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "hammerjs": "^2.0.8",
     "howler": "^2.0.15",
     "install": "^0.12.2",
-    "jquery": "^3.3.1",
+    "jquery": ">=3.0.0",
     "ng-sidebar": "^8.0.0",
-    "npm": "^6.4.1",
+    "node-sass": "^4.12.0",
+    "npm": "^6.9.0",
     "rxjs": "~6.2.0",
     "tone": "^0.12.80",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
+    "@angular-devkit/build-angular": "^0.10.0",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
